--- a/bytenba/www/index.html
+++ b/bytenba/www/index.html
@@ -59,7 +59,7 @@
 <!-- <html lang="en"> -->
 <head>
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Website Design Easy Tutorials</title> 
+   <title>AppraisePro</title> 
    <link rel="stylesheet" href="style.css">
 
    <link href="https://fonts.googleapis.com/css2? family-Roboto:wght@400%;700&display=swap" rel="stylesheet">
