--- a/bytenba/www/index.html
+++ b/bytenba/www/index.html
@@ -94,7 +94,7 @@
                     <p>Let's explore the new way of storing and maintaining appraisal data on a centralized database for Vidyalankar
 Institute of Technology </p>
                     <div class="btn-box">
-                      <a href="" class="btn-1">
+                      <a href="/login" class="btn-1">
                         Login
                       </a>
                       <a href="" class="btn-2">
@@ -127,7 +127,7 @@ Institute of Technology </p>
                       Let's explore the new way of storing and maintaining appraisal data on a centralized database for Vidyalankar
 Institute of Technology </p>
                     <div class="btn-box">
-                      <a href="" class="btn-1">
+                      <a href="/login" class="btn-1">
                         Login
                       </a>
                       <a href="" class="btn-2">
@@ -160,8 +160,8 @@ Institute of Technology </p>
                       Let's explore the new way of storing and maintaining appraisal data on a centralized database for Vidyalankar
 Institute of Technology </p>
                     <div class="btn-box">
-                      <a href="" class="btn-1">
-                        Login
+                      <a href="/login" class="btn-1">
+                        Login 
                       </a>
                       <a href="" class="btn-2">
                         Information
