--- a/bytenba/www/index.html
+++ b/bytenba/www/index.html
@@ -41,7 +41,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <!-- <span>Hostit</span> -->
-            <img src="/bytenba/www/images/appraiseprlogo.png" class="logo">
+            <img src="images/appraiseprlogo.png" class="logo">
           </a>
 
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
