--- a/bytenba/www/index.html
+++ b/bytenba/www/index.html
@@ -40,8 +40,7 @@
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
-            <!-- <span>Hostit</span> -->
-            <img src="images/appraiseprlogo.png" class="logo">
+            <img src="images/appraiseprologo.png" class="logo">
           </a>
 
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,13 +50,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav  ml-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="index.html"><h5>Home</h5><span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html"> About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact Us</a>
+                <a class="nav-link" href="about.html"> <h5>About</h5></a>
               </li>
             </ul>
             <div class="quote_btn-container">
@@ -84,7 +80,7 @@
                     <h1>
                       AppraisePro 
                       <!-- <h3>new way to manage the forms</h3> -->
-                      <p style="font-size:small;"><i>Transforming Appraisals, Empowering Excellence!</i></p>
+                      <p style="font-size:small; font-weight: normal;"><i>Transforming Appraisals, Empowering Excellence!</i></p>
                     </h1>
                     <p>An innovative software solution designed to modernize and streamline the appraisal process at Vidyalankar Institute of Technology, ensuring efficiency, accuracy, and empowerment for faculty and staff</p>
                     <div class="btn-box">
@@ -182,7 +178,7 @@ Institute of Technology </p>
 
   <!-- service section -->
 
-  <section class="service_section layout_padding">
+  <!-- <section class="service_section layout_padding">
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
@@ -211,8 +207,8 @@ Institute of Technology </p>
               </a>
             </div>
           </div>
-        </div>
-        <div class="col-md-6 col-lg-4">
+        </div> -->
+        <!-- <div class="col-md-6 col-lg-4">
           <div class="box ">
             <div class="img-box">
               <img src="images/s2.png" alt="">
@@ -250,9 +246,9 @@ Institute of Technology </p>
 
               </a>
             </div>
-          </div>
-        </div>
-  </section>
+          </div> -->
+        <!-- </div> -->
+  <!-- </section> -->
 
   <!-- end service section -->
 
@@ -330,66 +326,6 @@ about the technology, we try to come up with creative solutions.
   </section>
 
   <!-- end server section -->
-                        
-
-  <!-- contact section -->
-  <section class="contact_section layout_padding-bottom">
-    <div class="container">
-      <div class="heading_container heading_center">
-        <h2>
-          Get In Touch
-        </h2>
-      </div>
-      <div class="row">
-        <div class="col-md-8 col-lg-6 mx-auto">
-          <div class="form_container">
-            <form action="">
-              <div>
-                <input type="text" placeholder="Your Name" />
-              </div>
-              <div>
-                <input type="email" placeholder="Your Email" />
-              </div>
-              <div>
-                <input type="text" placeholder="Your Phone" />
-              </div>
-              <div>
-                <input type="text" class="message-box" placeholder="Message" />
-              </div>
-              <div class="btn_box ">
-                <button>
-                  SEND
-                </button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- end contact section -->
-
-  <!-- info section -->
-
-  <section class="info_section layout_padding2">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-3 mb-0">
-          <h4>
-            Subscribe
-          </h4>
-          <form action="#">
-            <input type="text" placeholder="Enter email" />
-            <button type="submit">
-              Subscribe
-            </button>
-          </form>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- end info section -->
 
 
   <!-- footer section -->
