--- a/bytenba/www/index.html
+++ b/bytenba/www/index.html
@@ -29,7 +29,7 @@
   <link href="css/style.css" rel="stylesheet" />
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
-
+  <title>AppraisePro</title>
 </head>
 
 <body>
@@ -80,7 +80,7 @@
                     <h1>
                       AppraisePro 
                       <!-- <h3>new way to manage the forms</h3> -->
-                      <p style="font-size:small; font-weight: normal;"><i>Transforming Appraisals, Empowering Excellence!</i></p>
+                      <!--<p style="font-size:small; font-weight: normal;"><i>Transforming Appraisals, Empowering Excellence!</i></p>-->
                     </h1>
                     <p>An innovative software solution designed to modernize and streamline the appraisal process at Vidyalankar Institute of Technology, ensuring efficiency, accuracy, and empowerment for faculty and staff</p>
                     <div class="btn-box">
